0.6.4/io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/index.md
[io.gladed.watchable](../index.md) / [kotlinx.coroutines.CoroutineScope](./index.md)

### Extensions for kotlinx.coroutines.CoroutineScope

| Name | Summary |
|---|---|
| [batch](batch.md) | `fun <T, C : `[`Change`](../-change.md)`<`[`T`](batch.md#T)`>> CoroutineScope.batch(watchable: `[`Watchable`](../-watchable/index.md)`<`[`T`](batch.md#T)`, `[`C`](batch.md#C)`>, minPeriod: `[`Long`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html)` = 0, func: suspend (`[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`C`](batch.md#C)`>) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`SubscriptionHandle`](../-subscription-handle/index.md)<br>Deliver multiple changes for this [Watchable](../-watchable/index.md) to [func](batch.md#io.gladed.watchable$batch(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.batch.T, io.gladed.watchable.batch.C)), kotlin.Long, kotlin.SuspendFunction1((kotlin.collections.List((io.gladed.watchable.batch.C)), kotlin.Unit)))/func), starting with its initial state, until the returned [SubscriptionHandle](../-subscription-handle/index.md) is closed or this [CoroutineScope](#) completes. |
| [bind](bind.md) | `fun <T, M : `[`T`](bind.md#T)`, C : `[`Change`](../-change.md)`<`[`T`](bind.md#T)`>> CoroutineScope.bind(dest: `[`MutableWatchable`](../-mutable-watchable/index.md)`<`[`T`](bind.md#T)`, `[`M`](bind.md#M)`, `[`C`](bind.md#C)`>, origin: `[`Watchable`](../-watchable/index.md)`<`[`T`](bind.md#T)`, `[`C`](bind.md#C)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Bind [dest](bind.md#io.gladed.watchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.bind.T, io.gladed.watchable.bind.M, io.gladed.watchable.bind.C)), io.gladed.watchable.Watchable((io.gladed.watchable.bind.T, io.gladed.watchable.bind.C)))/dest) so that it receives values from [origin](bind.md#io.gladed.watchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.bind.T, io.gladed.watchable.bind.M, io.gladed.watchable.bind.C)), io.gladed.watchable.Watchable((io.gladed.watchable.bind.T, io.gladed.watchable.bind.C)))/origin) as long as this [CoroutineScope](#) lives.`fun <T, M : `[`T`](bind.md#T)`, C : `[`Change`](../-change.md)`<`[`T`](bind.md#T)`>, T2, C2 : `[`Change`](../-change.md)`<`[`T2`](bind.md#T2)`>> CoroutineScope.bind(dest: `[`MutableWatchable`](../-mutable-watchable/index.md)`<`[`T`](bind.md#T)`, `[`M`](bind.md#M)`, `[`C`](bind.md#C)`>, origin: `[`Watchable`](../-watchable/index.md)`<`[`T2`](bind.md#T2)`, `[`C2`](bind.md#C2)`>, apply: `[`M`](bind.md#M)`.(`[`C2`](bind.md#C2)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Bind [dest](bind.md#io.gladed.watchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.bind.T, io.gladed.watchable.bind.M, io.gladed.watchable.bind.C)), io.gladed.watchable.Watchable((io.gladed.watchable.bind.T2, io.gladed.watchable.bind.C2)), kotlin.Function2((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C2, kotlin.Unit)))/dest) so that it receives changes from [origin](bind.md#io.gladed.watchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.bind.T, io.gladed.watchable.bind.M, io.gladed.watchable.bind.C)), io.gladed.watchable.Watchable((io.gladed.watchable.bind.T2, io.gladed.watchable.bind.C2)), kotlin.Function2((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C2, kotlin.Unit)))/origin) and applies them with [apply](bind.md#io.gladed.watchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.bind.T, io.gladed.watchable.bind.M, io.gladed.watchable.bind.C)), io.gladed.watchable.Watchable((io.gladed.watchable.bind.T2, io.gladed.watchable.bind.C2)), kotlin.Function2((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C2, kotlin.Unit)))/apply) for as long as this [CoroutineScope](#) lives. |
| [watch](watch.md) | `fun <T, C : `[`Change`](../-change.md)`<`[`T`](watch.md#T)`>> CoroutineScope.watch(watchable: `[`Watchable`](../-watchable/index.md)`<`[`T`](watch.md#T)`, `[`C`](watch.md#C)`>, func: suspend (`[`C`](watch.md#C)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`SubscriptionHandle`](../-subscription-handle/index.md)<br>Deliver changes for this [Watchable](../-watchable/index.md) to [func](watch.md#io.gladed.watchable$watch(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.watch.T, io.gladed.watchable.watch.C)), kotlin.SuspendFunction1((io.gladed.watchable.watch.C, kotlin.Unit)))/func), starting with its initial state, until the returned [SubscriptionHandle](../-subscription-handle/index.md) is closed or this [CoroutineScope](#) completes. |
